# Axum-Chat-Service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  fly.toml  render.yaml
docs/: e2ee-design.md
migrations/: 20260226120000_init.down.sql  20260226120000_init.up.sql  20260227120000_multi_tenant.down.sql  20260227120000_multi_tenant.up.sql
src/: config.rs  error.rs  main.rs  state.rs
src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
src/db/: messages.rs  mod.rs  rooms.rs  users.rs
src/handlers/: auth_handlers.rs  mod.rs  room_handlers.rs
src/models/: auth.rs  message.rs  mod.rs  room.rs  user.rs
src/routes/: auth.rs  mod.rs  rooms.rs  websocket.rs
src/websocket/: mod.rs  room.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  api.ts  config.ts  index.css  types.ts
web/src/components/: AuthScreen.tsx  Avatar.tsx  ChatArea.tsx  Sidebar.tsx  index.ts
web/src/hooks/: index.ts  useAuth.ts  useRoomWebSocket.ts  useRooms.ts
